[package]
name = "rip"
version = "0.1.0"
edition = "2021"
authors = ["moznion <moznion@mail.moznion.net>"]
description = "Parser and serializer library for RIP v1/v2 protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/moznion/rip-rs"
homepage = "https://github.com/moznion/rip-rs"
documentation = "https://docs.rs/rip"
categories =  ["network-programming"]
keywords = ["rip"]

[dependencies]
thiserror = "1.0.50"
